<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="32dp"
    android:layout_marginVertical="16dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="end">

        <Button
            android:id="@+id/btn_logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_logOut"
            android:textSize="16sp"
            style="@style/Widget.Material3.Button.TextButton"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_profile"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_names"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"  />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:hint="@string/txt_names"
        android:minHeight="48dp"
        android:paddingHorizontal="6dp"
        android:ems="10"
        android:layout_marginBottom="16dp"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_lastNames"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"  />

    <EditText
        android:id="@+id/edt_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:hint="@string/txt_lastNames"
        android:minHeight="48dp"
        android:paddingHorizontal="6dp"
        android:ems="10"
        android:layout_marginBottom="16dp"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"  />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/txt_email_placeholder"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingHorizontal="6dp"
        android:ems="10"
        android:layout_marginBottom="16dp"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_password"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"  />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/txt_password"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingHorizontal="6dp"
        android:layout_marginBottom="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.Material3.Button.TextButton"
            android:backgroundTint="?attr/dangerColor"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:text="@string/txt_btn_cancel"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.Material3.Button.TextButton"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:text="@string/txt_btn_save" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_contact_description"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_contact_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        android:backgroundTint="?attr/contact_color"
        android:textColor="?attr/colorOnPrimary"
        android:paddingHorizontal="32dp"
        android:textSize="16sp"
        android:text="@string/txt_btn_contact"  />

</LinearLayout>