<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wallet.ui.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_manage"
        android:name="com.example.wallet.ui.views.manage.ManageFragment"
        android:label="@string/txt_manage"
        tools:layout="@layout/fragment_manage" >

        <action android:id="@+id/navigation_manage_to_navigation_add_account"
            app:destination="@+id/navigation_add_account_movement" />

    </fragment>

    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.example.wallet.ui.views.plan.PlanFragment"
        android:label="@string/txt_plan"
        tools:layout="@layout/fragment_plan" />

    <fragment
        android:id="@+id/navigation_tip"
        android:name="com.example.wallet.ui.views.tips.TipsFragment"
        android:label="@string/txt_tip"
        tools:layout="@layout/fragment_tips" />

    <fragment
        android:id="@+id/navigation_add_account_movement"
        android:name="com.example.wallet.ui.views.account.AddAccountMovementFragment"
        tools:layout="@layout/fragment_add_account_movement">

        <argument
            android:name="title"
            app:argType="string" />

        <argument
            android:name="typeMovement"
            app:argType="integer" />

    </fragment>



</navigation>