<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txt_title_form_movement"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_plan"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinner_plans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:background="@drawable/rounded_spinner"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical">
        <!--Amount-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_amount"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/edt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:minHeight="48dp"
                android:inputType="numberDecimal"
                android:hint="@string/txt_placeholder_amount"
                android:paddingStart="6dp"
                android:paddingEnd="0dp"
                android:background="@drawable/rounded_edittext"
                android:layout_marginBottom="16dp"
                android:textColor="?attr/input_text_color"
                android:textColorHint="?attr/input_hint_text_color"/>
        </LinearLayout>

        <!--Type Movement-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_typeMovement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_typeMovement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Ingreso"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnSaveMovement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_save"
        style="@style/Widget.Material3.Button.TextButton"
        android:textSize="16sp"/>
</LinearLayout>